0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/plot_pls.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/plot_pls.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_b_crossdecomposition_plot_pls.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_b_crossdecomposition_plot_pls.py:


PLS regression example
----------------------
In this example, we perform a PLS regression to predict the moisture of corn samples
from their NIR spectra.

.. GENERATED FROM PYTHON SOURCE LINES 16-17

Import the spectrochempy API package

.. GENERATED FROM PYTHON SOURCE LINES 17-19

.. code-block:: Python

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 20-21

The data set is available to download from the Eigenvector Archive:

.. GENERATED FROM PYTHON SOURCE LINES 21-25

.. code-block:: Python

    ds_list = scp.read("http://www.eigenvector.com/data/Corn/corn.mat", merge=False)
    ds_list_names = [f"{i} : {ds.name}({ds.shape})" for i, ds in enumerate(ds_list)]
    print(ds_list_names)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ['0 : m5nbs((3, 700))', '1 : mp5nbs((4, 700))', '2 : mp6nbs((4, 700))', '3 : propvals((80, 4))', '4 : m5spec((80, 700))', '5 : mp5spec((80, 700))', '6 : mp6spec((80, 700))']




.. GENERATED FROM PYTHON SOURCE LINES 26-33

This data set, originally taken at Cargil,  consists of 80 samples of corn measured on
3 different NIR spectrometers together with the moisture, oil, protein and starch
values for each of the samples is also included.
The 5th dataset named `'m5spec'`, contains the NIR spectra of 80 corn samples recorded
on the same instrument. Let's assign this NDDataset specta to `X`, add few
informations and plot it:
%%

.. GENERATED FROM PYTHON SOURCE LINES 33-38

.. code-block:: Python

    X = ds_list[4]
    X.title = "reflectance"
    X.x.title = "Wavelength"
    X.x.units = "nm"
    X.plot(cmap=None)



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/images/sphx_glr_plot_pls_001.png
   :alt: plot pls
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/images/sphx_glr_plot_pls_001.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 39-40

The values of the properties we want to predict are in the 4th dattaset named `'propval'` dataset:

.. GENERATED FROM PYTHON SOURCE LINES 40-42

.. code-block:: Python

    Y = ds_list[3]
    Y.T.plot(cmap=None, legend=Y.x.labels)



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/images/sphx_glr_plot_pls_002.png
   :alt: plot pls
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/images/sphx_glr_plot_pls_002.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 43-44

We are interested to predict the moisture content:

.. GENERATED FROM PYTHON SOURCE LINES 44-46

.. code-block:: Python

    y = Y[:, "Moisture"]








.. GENERATED FROM PYTHON SOURCE LINES 47-49

First we select 57 first samples (2/3 of the total) to train/calibrate the model and the remaining ones
to test/validate the model:

.. GENERATED FROM PYTHON SOURCE LINES 49-54

.. code-block:: Python

    X_train = X[:57]
    X_test = X[57:]
    y_train = y[:57]
    y_test = y[57:]








.. GENERATED FROM PYTHON SOURCE LINES 55-56

Then we create a PLSRegression object and fit the train datasets:

.. GENERATED FROM PYTHON SOURCE LINES 56-58

.. code-block:: Python

    pls = scp.PLSRegression(n_components=5)
    pls.fit(X_train, y_train)




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <spectrochempy.analysis.crossdecomposition.pls.PLSRegression object at 0x7f9712dc1d80>



.. GENERATED FROM PYTHON SOURCE LINES 59-61

Finally we generate a parity plot comparing the predicted and actual values, for
both train set and test set.

.. GENERATED FROM PYTHON SOURCE LINES 61-67

.. code-block:: Python


    ax = pls.parityplot(label="calibration", s=150)
    pls.parityplot(
        y_test, pls.predict(X_test), s=150, c="red", label="validation", clear=False
    )
    ax.legend(loc="lower right")



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/images/sphx_glr_plot_pls_003.png
   :alt: plot pls
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/images/sphx_glr_plot_pls_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <matplotlib.legend.Legend object at 0x7f9712f1b640>



.. GENERATED FROM PYTHON SOURCE LINES 69-71

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 71-73

.. code-block:: Python


    scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.813 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_b_crossdecomposition_plot_pls.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_pls.ipynb <plot_pls.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_pls.py <plot_pls.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_pls.zip <plot_pls.zip>`
